# ai-hedge-fund

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  README.md  analyze_ashare.py  analyze_huaxi_real.py  debug_agent_facts.py  debug_data_analysis.py  diagnose_akshare.py  fake.json  fake.md  fix_agent_prompts.py  mypy.ini  optimize_profile_fixture.json  optimize_profile_fixture.md  plan.md  planInstitutionalMultiStrategyFramework.prompt.md  pyproject.toml  r.json  r.md  test_all_data_sources.py  test_ashare.py  test_data_flow.py  test_new_data_architecture.py  test_stock_history.py  test_tushare.py  test_tushare_debug.py  trade_log.csv.example
.github/: copilot-instructions.md
.zcode/: config.json
config/: btst_strategy_thresholds.json  btst_strategy_thresholds_aggressive.json
data/: push_config.json.example
docker/: .dockerignore  Dockerfile
docs/: data_quality_improvement_plan.md  feature-flags.md
scripts/: README.md  _autodev_c191_patch.py  _autodev_c191_patch2.py  _autodev_c191_state.py  _autodev_c218_state.py  _autodev_c219_state.py  _autodev_c220_state.py  _autodev_c221_state.py  _backfill_historical_recs.py  _backtest_light_stage_universe.py  _backtest_short_commission_floor.py  _btst_p1_p2_next_actions.py  _diag_factor_horizon_sep.py  _diag_mr_subfactor_direction.py  _diag_r6_full_universe.py  _diag_r6_multihorizon_accrual.py  _diag_state_type_winrate.py  _diag_trend_pool_filter_discrimination.py  _diag_trend_subfactor_direction.py  _diag_universe_price_ic.py  _diag_volatility_counterfactual.py  _diag_within_pool_attribution_readiness.py  _p0_baseline_stats.py  _r5a_regime_winrate.py  _tmp_journal_baseline.py  aggregate_screening_daily_digest.py  analyze_btst_0422_baseline_freeze.py  analyze_btst_5d_15pct_boundary_contract_fill_path.py  analyze_btst_5d_15pct_boundary_contract_inspection.py  analyze_btst_5d_15pct_boundary_missing_six_core_keys.py  analyze_btst_5d_15pct_boundary_quarantine.py  analyze_btst_5d_15pct_factor_research_round1.py  analyze_btst_5d_15pct_false_negative_diagnostic_board.py  analyze_btst_5d_15pct_false_negative_dossier.py  analyze_btst_5d_15pct_missing_core_features_noise_compression.py  analyze_btst_5d_15pct_near_trend_threshold_recovery.py  analyze_btst_5d_15pct_objective_monitor.py  analyze_btst_5d_15pct_scoped_missing_price_manifest.py  analyze_btst_5d_15pct_trend_breakout_drilldown.py  analyze_btst_5d_15pct_trend_gate_confirmation_grid.py  (+332 more)
src/: backtester.py  main.py  project_env.py
tests/: test_agent_prompt_rules.py  test_akshare_api.py  test_akshare_provider_run_sync.py  test_akshare_proxy_safety.py  test_analyst_concurrency.py  test_analyze_btst_5d_15pct_boundary_contract_inspection_script.py  test_analyze_btst_5d_15pct_boundary_missing_six_core_keys_script.py  test_analyze_btst_5d_15pct_boundary_quarantine_script.py  test_analyze_btst_5d_15pct_factor_research_round1_script.py  test_analyze_btst_5d_15pct_false_negative_dossier_script.py  test_analyze_btst_5d_15pct_missing_core_features_noise_compression_script.py  test_analyze_btst_5d_15pct_objective_monitor_script.py  test_analyze_btst_5d_15pct_scoped_missing_price_manifest_script.py  test_analyze_btst_5d_15pct_trend_breakout_drilldown_script.py  test_analyze_btst_5d_15pct_trend_gate_confirmation_grid_script.py  test_analyze_btst_5d_15pct_trend_gate_missing_price_manifest_script.py  test_analyze_btst_5d_15pct_trend_gate_oos_validation_script.py  test_analyze_btst_5d_15pct_trend_gate_sample_intake_board_script.py  test_analyze_btst_candidate_entry_frontier_script.py  test_analyze_btst_candidate_entry_payoff_validation_script.py  test_analyze_btst_candidate_entry_rollout_governance_script.py  test_analyze_btst_candidate_pool_branch_priority_board_script.py  test_analyze_btst_candidate_pool_corridor_narrow_probe_script.py  test_analyze_btst_candidate_pool_corridor_persistence_dossier_script.py  test_analyze_btst_candidate_pool_corridor_window_command_board_script.py  test_analyze_btst_candidate_pool_corridor_window_diagnostics_script.py  test_analyze_btst_candidate_pool_recall_dossier_script.py  test_analyze_btst_carryover_aligned_peer_harvest_script.py  test_analyze_btst_carryover_aligned_peer_proof_board_script.py  test_analyze_btst_carryover_anchor_probe_script.py  test_analyze_btst_carryover_false_negative_dossier_script.py  test_analyze_btst_carryover_horizon_validation_script.py  test_analyze_btst_carryover_multiday_continuation_audit_script.py  test_analyze_btst_carryover_peer_board_script.py  test_analyze_btst_carryover_peer_expansion_script.py  test_analyze_btst_carryover_peer_promotion_gate_script.py  test_analyze_btst_early_runner_v1_script.py  (+322 more)
(+4168 files in other folders)
