[project]
name = "ai-hedge-fund"
version = "1.0.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.7",
    "langchain-anthropic>=0.3.5",
    "langchain-groq>=0.2.3",
    "langchain-openai>=0.3.5",
    "langchain-deepseek>=0.1.2",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.2.56",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.2",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "langchain-google-genai>=2.0.11",
    "fastapi>=0.104.0",
    "pydantic>=2.4.2",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.22",
    "alembic>=1.12.0",
    "langchain-gigachat>=0.3.12",
    "langchain-xai>=0.2.5",
    "akshare>=1.18.27",
    "tushare>=1.4.24",
    "baostock>=0.9.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "bcrypt>=5.0.0",
    "redis>=7.4.0",
    "fpdf2>=2.8.7",
    "aiohttp>=3.11.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "ftshare",
]

[tool.poetry]
name = "ai-hedge-fund"
version = "1.0.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langchain-anthropic = "0.3.5"
langchain-groq = "0.2.3"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
langchain-ollama = "0.3.6"
langgraph = "0.2.56"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^13.9.4"
langchain-google-genai = "^2.0.11"
# Backend dependencies
fastapi = {extras = ["standard"], version = "^0.104.0"}
pydantic = "^2.4.2"
httpx = "^0.27.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
langchain-gigachat = "^0.3.12"
langchain-xai = "^0.2.5"
# PDF report export (src/reporting/pdf_exporter.py — top-level import; R28 packaging fix)
fpdf2 = "^2.8.7"
# Async HTTP client (src/data/base_provider.py — top-level import + instantiation; R32 packaging fix)
aiohttp = "^3.11.0"
# Sync HTTP client (src/tools/api.py, src/utils/docker.py, src/utils/ollama.py — top-level imports; R33 packaging fix)
requests = "^2.31.0"
# Date arithmetic (backtesting engine/cli + src/cli/input.py — top-level imports; R33 packaging fix)
python-dateutil = "^2.8.2"
# A-share historical data source (src/tools/ashare_data_sources.py BaoStockDataSource — lazy import; R35 packaging fix)
baostock = "^0.9.2"
# A-share market data (src/tools/akshare_api.py + ashare_data_sources.py — top-level imports; R37 packaging parity fix)
akshare = "^1.18.27"
# A-share market data (src/tools/ashare_data_sources.py TushareDataSource — top-level import; R37 packaging parity fix)
tushare = "^1.4.24"
# A-share market data 3rd source (src/tools/ftshare_api.py — eastmoney_stock_flow, provides
# close + main_net_pct that tushare moneyflow lacks). Git source configured in [tool.uv.sources].
# ftshare_client._get_market() still returns None gracefully if SDK import fails.
# Disk cache backend (src/data/enhanced_cache.py — top-level import; R37 packaging parity fix)
redis = "^7.4.0"
# JWT auth (app/backend/auth/utils.py — top-level import; R37 packaging parity fix)
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# FastAPI form/file parsing runtime requirement (web app auth flows; R37 packaging parity fix)
python-multipart = ">=0.0.6"
# Password hashing (app/backend/auth/utils.py — top-level import; R37 packaging parity fix)
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.flake8]
max-line-length = 420

[tool.uv.sources]
ftshare = { git = "https://github.com/FTShare-Lab/FTShare-python-sdk.git" }

[tool.poetry.scripts]
backtester = "src.backtesting.cli:main"
research-feedback = "scripts.manage_research_feedback:main"
